--- a/src/Klassen/GUI/Startbildschirm.fxml
+++ b/src/Klassen/GUI/Startbildschirm.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<SplitPane minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="768.0" prefWidth="600.0" style="-fx-background-color: &quot;black&quot;;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Klassen.GUI.Startbildschirmcontroller">
+<SplitPane minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="768.0" prefWidth="600.0" style="-fx-background-color: &quot;black&quot;;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Klassen.GUI.Startbildschirmcontroller">
   <items>
     <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="768.0" prefWidth="600.0" style="-fx-background-color: &quot;black&quot;;">
          <children>
@@ -38,7 +35,7 @@
                   <Font size="23.0" />
                </font>
             </TextField>
-            <Label fx:id="lblPopup" contentDisplay="CENTER" layoutX="19.0" layoutY="388.0" prefHeight="43.0" prefWidth="562.0" textAlignment="CENTER">
+            <Label fx:id="lblPopup" alignment="CENTER" contentDisplay="CENTER" layoutX="19.0" layoutY="388.0" prefHeight="43.0" prefWidth="562.0" textAlignment="CENTER" textFill="#facc15">
                <font>
                   <Font size="23.0" />
                </font>
